# QtChatProgramClient

./: .gitignore  CMakeLists.txt  clientwindow.cpp
header/: clientwindow.h  packetHeader.h
src/: clientwindow.cpp  clientwindow.ui  main.cpp
